[package]
name = "rustedbox"
version = "0.1.0"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
license = "GPL-3.0"
edition = "2021"
description = "collection of funny and somewath useful tools"
readme = "README.md"
homepage = "https://mad4j.github.io/rustedbox/"
repository = "https://github.com/mad4j/rustedbox"
keywords = ["cli", "tools", "toys"]
categories = ["command-line-utilities"]
exclude = ["/resources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
rand = "0.8.5"
ring = "0.17.8"
rodio = "0.17.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
